# serializer version: 1
# name: test_replace_rich_text_tokens_replaces_code_block_with_info
  '''
  
  <div class="rich-text-code" misago-rich-text-code>
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Example string
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code>Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_code_block_with_info_and_syntax
  '''
  
  <div class="rich-text-code" misago-rich-text-code>
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Example string
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code>Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_code_block_with_syntax
  '''
  
  <div class="rich-text-code" misago-rich-text-code>
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Code
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code>Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_minimal_code_block
  '''
  
  <div class="rich-text-code" misago-rich-text-code>
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Code
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code>Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        <div class="rich-text-quote-info">
          Quote
        </div>
      
    </div>
    <blockquote class="rich-text-quote-body">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_info
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        <div class="rich-text-quote-info">
          Hello world
        </div>
      
    </div>
    <blockquote class="rich-text-quote-body">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_missing_post
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        <span class="rich-text-quote-avatar">
          <img src="/blank-avatar.png" alt="Username">
        </span>
        <div class="rich-text-quote-info">
          <span class="rich-text-quote-header-link">Username</span>
          <span class="rich-text-quote-header-separator">&bull;</span>
          <span class="rich-text-quote-header-timestamp">#1234</span>
        </div>
        <a href="/post/1234/" class="rich-text-quote-btn">
          <span class="material-icon">arrow_forward</span>
        </a>
      
    </div>
    <blockquote class="rich-text-quote-body">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_spoiler
  '''
  
  <details class="rich-text-spoiler">
    <summary class="rich-text-spoiler-header">
      <div class="rich-text-spoiler-info">
        Hidden message
      </div>
      <div class="rich-text-spoiler-toggle">
        toggle
      </div>
    </summary>
    <div class="rich-text-spoiler-body">
      
  <p>Hello world!</p>
  
    </div>
  </details>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_spoiler_with_custom_info
  '''
  
  <details class="rich-text-spoiler">
    <summary class="rich-text-spoiler-header">
      <div class="rich-text-spoiler-info">
        Lorem ipsum
      </div>
      <div class="rich-text-spoiler-toggle">
        toggle
      </div>
    </summary>
    <div class="rich-text-spoiler-body">
      
  <p>Hello world!</p>
  
    </div>
  </details>
  
  '''
# ---
